--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/cli-platform-ios": "^4.10.0",
     "@react-native-community/masked-view": "0.1.6",
     "lottie-ios": "^3.1.8",
@@ -24,7 +23,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "^0.9.1",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "^2.0.16"
+    "react-navigation-stack": "^2.0.16",
+    "realm": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
