--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -194,6 +194,9 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation 'com.facebook.fresco:animated-gif:2.0.0'
+
+
     // implementation project(':realm')
 
 
